--- a/period7thing.html
+++ b/period7thing.html
@@ -11,7 +11,7 @@
     </head>
     <body>
     <script>
-        
+        //testing from github
         var w = window.innerWidth;
         var h = window.innerHeight;
         var boing;
