--- a/period7thing.html
+++ b/period7thing.html
@@ -18,7 +18,7 @@
         //var player;
 
         function preload(){
-            soundFormat("mp3");
+            soundFormats("mp3");
             boing = loadSound("boing.mp3")
         }
 
