--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             bigblock3 = new bigblock3();
             bigblock4 = new bigblock4();
             bigblock5 = new bigblock5();
+            window.alert("Survive as long as possible.")
             //coin = new coin();
         }
 var hit = false;
