Forgot the update and shows
I added in the updates and shows for block 6 and 7

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@ function draw() {
     bigblock4.update()
     bigblock5.show()
     bigblock5.update()
+    bigblock6.show()
+    bigblock6.update()
+    bigblock7.show()
+    bigblock7.update()
     //coin.show()
     //coin.update()
     
